--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <img src="elogo80.svg" class="logo"></img>
        <div></div>
       <p class="lead">ezpls vocabulary is a simple, intuitive way to memorize words for the SAT, ACT, and AP Spanish exams. It provides a simple and intuitive interface to help you study, and keeps track of your progress as you go. Now available for the iPhone and the Apple Watch</p>
-      <img src="appstore.svg" class="appstore"></img>
+      <a href="https://itunes.apple.com/us/app/ezpls-vocabulary/id1049517649"><img src="appstore.svg"  class="appstore"></img></a>
       <p class="bottom">© 2015 Eeho Choi</p>
       
     </div>
